--- a/views/teams/create.pug
+++ b/views/teams/create.pug
@@ -11,7 +11,7 @@ block content
     
     div
       label(for="title") チーム名
-      input#title(name="title", value=example.body)
+      input#title(name="name", value=name)
 
     div.actions
       input(type="submit")
