--- a/views/teams/show.pug
+++ b/views/teams/show.pug
@@ -19,6 +19,6 @@ block content
         tr 
           td= task.id
           td= task.title
-          td= helpers.formatDateTime(task.createdAt)At
+          td= helpers.formatDateTime(task.createdAt)
           td
             a(href=`/teams/${team.id}/tasks/${task.id}/edit`) 編集
