--- a/views/teams/show.pug
+++ b/views/teams/show.pug
@@ -4,6 +4,8 @@ block content
   p 
     a(href=`/teams/${team.id}/edit`) 編集
   p
+    a(href=`/teams/${team.id}/members`) メンバー管理
+  p
     a(href=`/teams/${team.id}/tasks/create`) タスクの作成
 
   h2 タスク一覧
