--- a/views/teams/show.pug
+++ b/views/teams/show.pug
@@ -13,6 +13,7 @@ block content
     tbody 
       th タスクID 
       th タイトル
+      th 担当者
       th 作成日時
       th 操作
 
@@ -21,6 +22,8 @@ block content
         tr 
           td= task.id
           td= task.title
+          //-ここに担当者入れる
+          td= task.title 
           td= helpers.formatDateTime(task.createdAt)
           td
             a(href=`/teams/${team.id}/tasks/${task.id}/edit`) 編集
