--- a/views/tasks/create.pug
+++ b/views/tasks/create.pug
@@ -17,6 +17,11 @@ block content
     div 
       label(for="body") 内容
       textarea#body(name="body")
-
+    div
+      label(for="assigneeId") 担当者
+      select(name="assigneeId")
+        option(value=0) なし
+        each member in members
+          option(value=member.id) #{member.userName}
     div.actions
       input(type="submit")
