--- a/views/members/index.pug
+++ b/views/members/index.pug
@@ -23,4 +23,4 @@ block content
       
         tr 
         td= (memberUser.role='メンバー')
-        td= memberUser.displayName
+        td= memberUser.User.displayName
