--- a/views/tasks/edit.pug
+++ b/views/tasks/edit.pug
@@ -13,6 +13,12 @@ block content
     div
       label(for="title") 内容
       textarea#body(name="body")
-
+      
+    div
+      label(for="selectsAssigneeId") 担当者
+      select(name="selectsAssigneeId")
+        option(value=0) なし
+        each member in members
+          option(value=member.User.id, selected=(task.assigneeId == member.User.id)) #{member.User.displayName}
     div.actions
       input(type="submit", value='送信')
