--- a/views/teams/show.pug
+++ b/views/teams/show.pug
@@ -22,8 +22,7 @@ block content
         tr 
           td= task.id
           td= task.title
-          //-ここに担当者入れる
-          td= task.title 
+          td= task.Assignee.displayName
           td= helpers.formatDateTime(task.createdAt)
           td
             a(href=`/teams/${team.id}/tasks/${task.id}/edit`) 編集
