--- a/views/members/index.pug
+++ b/views/members/index.pug
@@ -22,5 +22,6 @@ block content
       each memberUser in memberUsers
       
         tr 
-        td= memberUser.role
+        //- td= memberUser.role
+        td= 'メンバー'
         td= memberUser.User.displayName
