--- a/views/manager/tasks/edit.pug
+++ b/views/manager/tasks/edit.pug
@@ -1,8 +1,8 @@
-extends ../layout
+extends ../../layout
 block content 
    h1 タスクの編集
 
-   form.box(action=`/teams/${team}/tasks/${task.id}`, method="post")
+   form.box(action=`/manager/teams/${team}/tasks/${task.id}`, method="post")
     _csrf
     _method put
     
