--- a/views/manager/tasks/create.pug
+++ b/views/manager/tasks/create.pug
@@ -5,10 +5,8 @@ block content
     a(href="/teams") 
 
   h1 タスクの新規作成
-
-    //-   form.box(action=`teams/${team.id}/tasks`, method="post")
-
   form.box(action=`/manager/teams/${teamId}/tasks`, method="post")
+    _method post
     _csrf
     
     div
