--- a/views/manager/teams/show.pug
+++ b/views/manager/teams/show.pug
@@ -25,4 +25,4 @@ block content
           td= task.Assignee.displayName
           td= helpers.formatDateTime(task.createdAt)
           td
-            a(href=`/teams/${team.id}/tasks/${task.id}/edit`) 編集
+            a(href=`/manager/teams/${team.id}/tasks/${task.id}/edit`) 編集
