--- a/views/manager/tasks/create.pug
+++ b/views/manager/tasks/create.pug
@@ -1,11 +1,6 @@
 extends ../../layout
 
 block content
-  //- - if(err)
-  //-   - const errors = err.errors
-  //-   ul.errors
-  //-     each error in err.errors
-  //-       li= error.message
   h1 
     a(href="/teams") 
 
@@ -13,6 +8,11 @@ block content
   form.box(action=`/manager/teams/${teamId}/tasks`, method="post")
     _method post
     _csrf
+
+    - if(err)
+      ul.errors
+        each error in err.errors
+          li= error.message
     
     div
       label(for="title") タイトル
