--- a/views/teams/create.pug
+++ b/views/teams/create.pug
@@ -7,6 +7,11 @@ block content
 
   form.box(action="/teams", method="post")
     _csrf
+
+    - if(err)
+      ul.errors
+        each error in err.errors
+          li= error.message
     
     div
       label(for="title") チーム名
