--- a/views/tasks/show.pug
+++ b/views/tasks/show.pug
@@ -1,6 +1,6 @@
 extends ../layout
 
 block content
-  h1 チーム#{task.teamId} / タスク#{task.id}
+  h1 #{team.name} / タスク#{task.id}
   h2 内容
   p #{task.body}
