--- a/views/tasks/show.pug
+++ b/views/tasks/show.pug
@@ -1,15 +1,30 @@
 extends ../layout
-
 block content
   h1 チーム#{team.name} / タスク#{task.id}
   h2 内容
-  p #{task.body}
+  p #{task.body} 
+
   h2 コメント
-  h2 タスクの新規作成
+  ul
+    each comment in comments
+      li= comment.message
+      |  #{helpers.formatDateTime(comment.createdAt)} #{comment.User.displayName}
   form(action=`/tasks/${task.id}/comments`, method="post")
+    _method post
     _csrf
+
+    - if(err)
+      ul.errors
+        each error in err.errors
+          li= error.message
+
+    p メッセージ
+    textarea(name="comment")
+    if (task.status === 0)
+      div
+        label 完了報告
+        input(type="checkbox", name="status", value=1)
+    else
+      p 既に完了報告済みです
     div
-      label(for="message") メッセージ
-      textarea#message(name="message")
-    div.actions
-      input(type="submit")
+      button(type="submit") 送信 
